// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MobilePhoneVerification /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="container content"
  id="mobile-phone-verification"
>
  <div
    className="inner"
  >
    <div
      className="main-column"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <div
          className="row fieldset code"
        >
          <p
            className="label"
          >
            PHONENUMBER_VERIFY ()
          </p>
          <div
            className="row"
          >
            <input
              className="input "
              id="code"
              name="code"
              onChange={[Function]}
              pattern="[0-9]{6,}"
              placeholder="MOBILE_CODE_PLACEHOLDER"
              required={true}
              title="MOBILE_CODE_TITLE"
              type="text"
              value=""
            />
          </div>
          <button
            className="button full"
            type="submit"
          >
            MOBILE_PHONE_VERIFY
          </button>
        </div>
      </form>
      <div
        className="row fieldset resend"
      >
        <p
          className="label"
        >
          RESEND_TOKEN_LABEL
        </p>
        <button
          className="button full"
          onClick={[Function]}
          type="button"
        >
          RESEND_TOKEN
        </button>
      </div>
      <div
        className="row fieldset change"
      >
        <p
          className="label"
        >
          PHONENUMBER_CHANGE_LABEL
        </p>
        <a
          className="button full"
          href="/test-org-2/change-phone-number"
        >
          CHANGE_PHONENUMBER
        </a>
      </div>
      <div
        className="row fieldset logout"
      >
        <p
          className="label"
        >
          LOGOUT_LABEL
        </p>
        <button
          className="button full"
          onClick={[Function]}
          type="button"
        >
          LOGOUT
        </button>
      </div>
    </div>
    <Memo(Connect(Contact)) />
  </div>
</div>
`;

exports[`Mobile Phone Token verification: standard flow should render successfully 1`] = `
<div
  className="container content"
  id="mobile-phone-verification"
>
  <div
    className="inner"
  >
    <div
      className="main-column"
    >
      <form
        className=""
        onSubmit={[Function]}
      >
        <div
          className="row fieldset code"
        >
          <p
            className="label"
          >
            Verify your mobile phone number (+393660011222) by inserting the code you received via SMS below.
          </p>
          <div
            className="row"
          >
            <input
              className="input "
              id="code"
              name="code"
              onChange={[Function]}
              pattern="[0-9]{6,}"
              placeholder="enter SMS verification code"
              required={true}
              title="this field must be a 6 digit numeric code"
              type="text"
              value=""
            />
          </div>
          <button
            className="button full"
            type="submit"
          >
            Submit
          </button>
        </div>
      </form>
      <div
        className="row fieldset resend"
      >
        <p
          className="label"
        >
          If you did not receive the verification SMS code, you can try sending it again by clicking below.
        </p>
        <button
          className="button full"
          onClick={[Function]}
          type="button"
        >
          Send a new verification code
        </button>
      </div>
      <div
        className="row fieldset change"
      >
        <p
          className="label"
        >
          Wrong phone number?
        </p>
        <a
          className="button full"
          href="/test-org-2/change-phone-number"
        >
          Change your phone number
        </a>
      </div>
      <div
        className="row fieldset logout"
      >
        <p
          className="label"
        >
          If you need to cancel the process you can log out below.
        </p>
        <button
          className="button full"
          onClick={[Function]}
          type="button"
        >
          Logout
        </button>
      </div>
    </div>
    <Connect(Contact) />
  </div>
</div>
`;
